# neolaas

./: .dockerignore  .gitignore  CONTRIBUTING.md  Cargo.toml  Makefile.toml  README.md
.cargo/: config.toml
.github/: CODEOWNERS  dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  docker.yml  release.yml
crates/neolaas-api/: Cargo.toml
crates/neolaas-api/src/: handlers.rs  lib.rs  routes.rs
crates/neolaas-cli/: Cargo.toml
crates/neolaas-cli/src/: lib.rs
crates/neolaas-core/: Cargo.toml
crates/neolaas-core/src/: lib.rs  models.rs
crates/neolaas-operator/: Cargo.toml
crates/neolaas-operator/src/: lib.rs  main.rs
crates/neolaas-operator/src/controllers/: context.rs  machine.rs  mod.rs  switch.rs  vlan.rs
crates/neolaas-operator/src/crds/: machine.rs  mod.rs  switch.rs  vlan.rs
crates/neolaas-operator/src/etcd/: mod.rs  sync.rs
crates/neolaas-pxe/: Cargo.toml
crates/neolaas-pxe/src/: main.rs
crates/neolaas-server/: Cargo.toml  build.rs
crates/neolaas-server/src/: api.rs  api_p2p.rs  lib.rs  main.rs  models.rs  version.rs
crates/neolaas-server/src/actors/: mod.rs  resource_actor.rs
crates/neolaas-server/src/actors/host_actor/: actor.rs  mod.rs
crates/neolaas-server/src/api/: health.rs  hosts.rs  machines.rs  metrics.rs  mod.rs  p2p.rs  state.rs
crates/neolaas-server/src/network/: behaviour.rs  config.rs  discovery.rs  discovery_controller.rs  init.rs  mod.rs  registry.rs  test_actor.rs
crates/neolaas-server/src/network/discovery/: controller.rs  etcd.rs  mod.rs  phases.rs
crates/neolaas-server/src/network/health/: actor.rs  messages.rs  mod.rs  ping_loop.rs
crates/neolaas-server/src/network/machines/: actor.rs  manager.rs  messages.rs  mod.rs
crates/neolaas-server/src/network/sharding/: actor.rs  maglev.rs  messages.rs  mod.rs  rendezvous.rs
crates/neolaas-server/src/network/swarm/: builder.rs  event_loop.rs  mod.rs
crates/neolaas-server/src/network/types/: mod.rs  peer.rs  state.rs
crates/neolaas-server/src/observability/: events.rs  metrics.rs  mod.rs  supervision.rs  tracing.rs
deploy/apps/neolaas/: headless-service.yaml  kustomization.yaml  service.yaml  statefulset.yaml
deploy/apps/neolaas-operator/: deployment.yaml  rbac.yaml
deploy/base/: kustomization.yaml
deploy/base/cnpg/: cluster.yaml  secret.yaml
deploy/base/crds/: inventory.yaml  kustomization.yaml
deploy/base/etcd/: service.yaml  statefulset.yaml
deploy/base/observability/: grafana-configmap.yaml  grafana-dashboard-neolaas.yaml  grafana-deployment.yaml  kustomization.yaml  loki-configmap.yaml  loki-deployment.yaml  prometheus-configmap.yaml  prometheus-deployment.yaml  prometheus-service.yaml  promtail-configmap.yaml  promtail-daemonset.yaml  servicemonitor.yaml  tempo-configmap.yaml  tempo-deployment.yaml
deploy/bootstrap/kind/: kind-config.yaml  up.sh
deploy/examples/: inventory.yaml
deploy/overlays/dev/: kustomization.yaml
images/neolaas/: Dockerfile
images/neolaas-operator/: Dockerfile
images/neolaas-pxe/: Dockerfile
migrations/: 20260108000001_initial_schema.sql  20260109100714_create_host_mailboxes.sql
scripts/: graceful-shutdown.sh
