[workspace]
members = [
  "crates/neolaas-server",
  "crates/neolaas-pxe",
  "crates/neolaas-cli",
  "crates/neolaas-operator",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["neolaas contributors"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/N4D1K-lgtm/neolaas"

[workspace.dependencies]
tokio = { version = "1.49.0", features = ["full"] }
futures = "0.3.31"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
thiserror = "2.0"
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.22", features = ["env-filter", "json"] }

# actor framework
kameo = { version = "0.19.2", features = ["remote", "tracing"] }

# web framerwork
axum = { version = "0.8", features = ["macros", "ws"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["trace", "cors"] }

# database
sqlx = { version = "0.8.6", features = [
  "runtime-tokio-rustls",
  "postgres",
  "uuid",
  "chrono",
  "migrate",
] }

# networking
libp2p = { version = "0.56.0", features = [
  "serde",
  "tcp",
  "quic",
  "noise",
  "yamux",
  "tokio",
  "mdns",
  "kad",
  "identify",
] }
etcd-client = { version = "0.18", features = ["raw-channel"] }
tonic = "0.14"
hickory-resolver = "0.25"
http = "1.2"

# cli
clap = { version = "4.5", features = ["derive", "env"] }

# utils
uuid = { version = "1.0", features = ["serde", "v4"] }
chrono = { version = "0.4", features = ["serde"] }
backoff = { version = "0.4", features = ["tokio"] }

# metrics
metrics = "0.24"
metrics-exporter-prometheus = "0.18.1"

# OpenTelemetry
opentelemetry = "0.31"
opentelemetry_sdk = { version = "0.31", features = ["rt-tokio"] }
opentelemetry-otlp = { version = "0.31", features = ["grpc-tonic"] }
tracing-opentelemetry = "0.32"

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
strip = true
