[package]
name = "neolaas-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
# Workspace dependencies
tokio = { workspace = true }
futures = { workspace = true }
sqlx = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
kameo = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
etcd-client = { workspace = true }

neolaas-api = { workspace = true }
