[package]
name = "neolaas-pxe"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[[bin]]
name = "neolaas-pxe"
path = "src/main.rs"

[dependencies]
# Workspace dependencies
tokio = { workspace = true }
futures = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
kameo = { workspace = true }
axum = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }

# Internal crates
neolaas-core = { workspace = true }

# PXE-specific dependencies
# tftp = "0.2" # Add TFTP server
# dhcp4r = "0.2" # Add DHCP server if needed
