[package]
name = "neolaas-server"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[[bin]]
name = "neolaas-server"
path = "src/main.rs"

[dependencies]
tokio = { workspace = true }
futures = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
libp2p = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
kameo = { workspace = true }
axum = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
sqlx = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
backoff = { workspace = true }

etcd-client = { workspace = true }
tonic = { workspace = true }
hickory-resolver = { workspace = true }
http = { workspace = true }
async-trait = "0.1"

metrics = { workspace = true }
metrics-exporter-prometheus = { workspace = true }
opentelemetry = { workspace = true }
opentelemetry_sdk = { workspace = true }
opentelemetry-otlp = { workspace = true }
tracing-opentelemetry = { workspace = true }

[build-dependencies]
vergen-gitcl = { version = "9.1.0", features = ["build", "cargo", "rustc"] }
anyhow = { workspace = true }
